Exclude locked locations from charging candidates
Ensure that orders for automatic recharging do not try to send vehicles
to locked locations.

While here, modernize the related test class's code.

Reported-by: Toomy576 @ GitHub
Merged-by: Martin Grzenia <martin.grzenia@iml.fraunhofer.de>